# GEOtcha

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli-reference.md  disease-packs.md  extending-ontologies.md  getting-started.md  harmonization.md  index.md  ml-llm.md  sdk-reference.md
geotcha_roadmap/: GEOtcha_executable_final.md
scripts/: README.md  build_ml_index.py  build_ontologies.py
scripts/sources/: cl_config.json  doid_config.json  treatments_curated.json  uberon_config.json
src/geotcha/: __init__.py  api.py  benchmark.py  cache.py  cli.py  config.py  exceptions.py  models.py  packs.py  pipeline.py  rate_limiter.py
src/geotcha/export/: __init__.py  formatters.py  writers.py
src/geotcha/extract/: __init__.py  fields.py  gse_parser.py  gsm_parser.py
src/geotcha/harmonize/: __init__.py  disease.py  llm.py  ontology.py  rules.py
src/geotcha/ml/: exceptions.py  index.py  inference.py  loader.py
src/geotcha/search/: __init__.py  entrez.py  filters.py  query_builder.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_benchmark_regression.py  test_cache.py  test_cli.py  test_config.py  test_config_ml.py  test_entrez_cache.py  test_packs.py  test_pipeline.py  test_pipeline_parallel.py  test_report.py
tests/fixtures/benchmark/: GSE100833.json  GSE109142.json  GSE112366.json  GSE117993.json  GSE126124.json  GSE138614.json  GSE140161.json  GSE147089.json  GSE150910.json  GSE153760.json  (+91 more)
tests/test_export/: test_parquet.py  test_writers.py
tests/test_extract/: test_fields.py  test_gsm_parser.py
tests/test_harmonize/: test_cell_type.py  test_llm.py  test_ontology.py  test_ontology_loader.py  test_rules.py  test_treatment.py
tests/test_ml/: test_cli.py  test_exceptions.py  test_index.py  test_inference.py  test_loader.py  test_pipeline_integration.py
tests/test_search/: test_filters.py  test_query_builder.py
(+10 files in other folders)
