[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geotcha"
version = "0.7.0"
description = "Extract and harmonize RNA-seq metadata from NCBI GEO"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "GEOtcha Contributors" },
]
keywords = ["geo", "ncbi", "rna-seq", "metadata", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "biopython>=1.83",
    "GEOparse>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tenacity>=8.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.30", "httpx>=0.27"]
ml = ["gliner>=0.2", "sentence-transformers>=2.6", "onnxruntime>=1.17"]
parquet = ["pyarrow>=14.0"]
dev = ["pytest>=8.0", "pytest-cov", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/shantanubafna/GEOtcha"
Repository = "https://github.com/shantanubafna/GEOtcha"
Issues = "https://github.com/shantanubafna/GEOtcha/issues"

[project.scripts]
geotcha = "geotcha.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/geotcha"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.coverage.run]
source = ["geotcha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
